test/fail/vt_06.v3
//@execute (0,0)=0; (0,1)=6; (0,2)=6; (0,3)=6; (1,1)=0; (1,2)=6; (1,3)=6; (2,2)=0; (2,3)=6; (3,3)=0
type vt_06 {
	case X(i: int);
	case Y(i: int);
}
def compare(x: vt_06, y: vt_06) -> int {
	return
		if(x != x, 0b0001) |
		if(x != y, 0b0010) |
		if(y != x, 0b0100) |
		if(y != y, 0b1000);
}
def xx = [vt_06.X(11), vt_06.Y(11), vt_06.X(12), vt_06.Y(12)];
def main(a: int, b: int) -> int {
	return compare(xx(a), xx(b));
}
